--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul{
 }
 
 
-.search-btn, .submit-btn {
+.search-btn, .submit-btn, .submit-btn-register {
   background-color: #4caf50;
   color: #fff;
   border: none;
@@ -74,12 +74,17 @@ ul{
 
 }
 
+.submit-btn-register{
+  height: 7vh;
+  width: 7vw;
+}
+
 
 .formulaire {
   display: flex;
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .segway{
